--- a/video.css
+++ b/video.css
@@ -4,8 +4,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    height: 100%;
+    width:100%;
+    height:100vh;
     overflow: hidden;
 
     background-color: black;
