--- a/video.css
+++ b/video.css
@@ -2,17 +2,19 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
-    width:100%;
-    height:100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 
     background-color: black;
 }
 
 .site-wrap > video {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
     object-fit: cover;
-    width:100%;
-    height:100%;
 }
