--- a/main-style.css
+++ b/main-style.css
@@ -1,12 +1,13 @@
 html {
   background-color: #f5f5f5;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 body {
-  margin: 0;
+  overflow: hidden;
+  margin: 0px;
 }
 
 .antihighlight {
