--- a/index.css
+++ b/index.css
@@ -2,3 +2,19 @@ body {
     margin: 0px;
     overflow: hidden;
 }
+
+.prereq {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: black;
+}
+
+.aScene {
+}
