--- a/index.css
+++ b/index.css
@@ -3,11 +3,9 @@ body {
     overflow: hidden;
 }
 
-.prereq {
+#prereq {
     position: absolute;
     top: 0px;
-    bottom: 0px;
-    left: 0px;
     right: 0px;
 
     width: 100%;
@@ -16,5 +14,5 @@ body {
     background-color: black;
 }
 
-.aScene {
+#aScene {
 }
