--- a/index.css
+++ b/index.css
@@ -11,6 +11,11 @@ body {
     width: 100%;
     height: 100%;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     background-color: black;
 }
 
