Changed Browser Handling

--- a/video.css
+++ b/video.css
@@ -6,7 +6,7 @@
     height: 100%;
     /* overflow: hidden; */
 
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
 .site-wrap > video {
