--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    background-color: black;
+    background-color: rgb(85, 85, 85);
 }
 
 #prereq > h1 {
