--- a/index.css
+++ b/index.css
@@ -33,3 +33,14 @@ body {
 #prereq > h1 {
     color: white;
 }
+
+#arjs-video {
+    position: absolute; 
+    width: 100%; 
+    height: 100%; 
+    top: 0px; 
+    left: 0px; 
+    z-index: -2; 
+    margin-left: -49.5px; 
+    margin-top: 0px;
+}
