--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 body {
-    position: absolute;
+    /* position: fixed; */
 
     margin: 0px;
     overflow: hidden;
 
-    left: 0;
+    /* left: 0;
     right: 0;
     top: 0;
-    bottom: 0;
+    bottom: 0; */
 
     z-index: 1;
 }
