--- a/index.css
+++ b/index.css
@@ -42,7 +42,15 @@ body {
     width: 100%;
     height: 100%;
 
-    color: yellow;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 50;
+
+    color: white;
+    background-color: lightblue;
 }
 
 .invisible {
