--- a/index.css
+++ b/index.css
@@ -4,12 +4,34 @@ body {
     margin: 0px;
     overflow: hidden;
 
+    font-family: 'Noto Sans JP', sans-serif;
+
     /* left: 0;
     right: 0;
     top: 0;
     bottom: 0; */
 
     z-index: 1;
+}
+
+#left-star {
+    position: fixed;
+
+    max-width: 30%;
+    top: 5%;
+    left: 5%;
+
+    transform: rotate(-30deg) scaleX(0.6);
+}
+
+#right-star {
+    position: fixed;
+    
+    max-width: 25%;
+    top: 20%;
+    right: 8%;
+
+    transform: rotate(30deg) scale(0.8) scaleX(0.6);
 }
 
 #prereq {
@@ -27,11 +49,64 @@ body {
 
     z-index: 100;
 
-    background-color: rgb(85, 85, 85);
+    background-color: #232323;
 }
 
 #prereq > h1 {
     color: white;
+}
+
+#inapp-screen {
+    position: fixed;
+
+    top: 0%;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+
+    color: white;
+}
+
+.text-area {
+    margin: auto;
+    text-align: center;
+    justify-content: space-evenly;
+
+    position: relative;
+    top: 65%;
+}
+
+#play-button {
+    position: absolute;
+
+    transform: translate(-50%, -50%);
+
+    top: 50%;
+    left: 50%;
+
+    max-width: 40%;
+
+    -webkit-filter: drop-shadow(10px 8px 5px rgb(0, 0, 0));
+    filter: drop-shadow(10px 8px 5px rgb(0, 0, 0));
+}
+
+#launch-text {
+    font-weight: bold;
+    font-size: 8vw;
+    letter-spacing: .8em;
+    margin-right: -.8em;
+
+    text-shadow: 4px 4px 10px #000000;
+}
+
+#different-browser-text {
+    font-weight: 500;
+    font-size: 4vw;
+
+    letter-spacing: 0.2em;
+    margin-right: -0.2em;
+
+    text-shadow: 4px 4px 5x #000000;
 }
 
 #loading-screen {
