--- a/index.css
+++ b/index.css
@@ -192,6 +192,80 @@ body {
     margin-right: -0.2em;
 }
 
+#allowance-screen {
+    position: fixed;
+
+    top: 0%;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+
+    color: white;
+}
+
+#allowance-text-area {
+    margin: auto;
+    text-align: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+
+    position: relative;
+    top: 50%;
+
+    -webkit-transform: translateY(-50%);
+
+        -ms-transform: translateY(-50%);
+
+            transform: translateY(-50%);
+}
+
+#allowance-text {
+    font-weight: bold;
+    font-size: 8vw;
+    letter-spacing: .2em;
+    margin-right: -.2em;
+
+    text-shadow: 4px 4px 10px #000000;
+}
+
+#desktop-screen {
+    position: fixed;
+
+    top: 0%;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+
+    color: white;
+}
+
+#desktop-text-area {
+    margin: auto;
+    text-align: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+
+    position: relative;
+    top: 50%;
+
+    -webkit-transform: translateY(-50%);
+
+        -ms-transform: translateY(-50%);
+
+            transform: translateY(-50%);
+}
+
+#desktop-text {
+    font-weight: bold;
+    font-size: 8vw;
+    letter-spacing: .2em;
+    margin-right: -.2em;
+
+    text-shadow: 4px 4px 10px #000000;
+}
+
 #loading-screen {
     position: fixed;
 
