--- a/video.css
+++ b/video.css
@@ -2,22 +2,21 @@
     position: absolute;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    height: 100%;
-    /* overflow: hidden; */
+    height: 100vh;
 
     background-color: rgb(0, 0, 0);
 }
 
 .site-wrap > video {
-    min-width: 100%;
-    min-height: 100%;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 
-    width: auto;
-    height: auto;
+    max-height: 100%;
+    max-width: 100%;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 0;
 }
