--- a/video.css
+++ b/video.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .site-wrap {
     position: absolute;
     top: 0;
@@ -7,13 +14,17 @@
     width: 100%;
     height: 100vh;
 
-    background-color: rgb(0, 0, 0);
+    background-color: black;
 }
 
 .site-wrap > video {
-    object-fit: cover;
+    -o-object-fit: fill;
+       object-fit: fill;
     width: 100%;
     height: 100%;
+
+    height: 100vh;
+    min-width: 100vw;
 
     max-height: 100%;
     max-width: 100%;
