--- a/index.css
+++ b/index.css
@@ -266,6 +266,38 @@ body {
     text-shadow: 4px 4px 10px #000000;
 }
 
+#video-screen {
+    transition: all .5s ease-in-out;
+
+    position: fixed;
+
+    top: 0px;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+
+    z-index: 30;
+
+    color: white;
+    background-color: #232323;
+}
+
+.closed {
+    transform: translate(100%);
+}
+
+#vs-close-button {
+    position: relative;
+
+    top: 0%;
+    left: 0%;
+    
+    max-width: 25%;
+
+    transform: rotate(45deg) scale(0.5, 0.5) translate(-50%, -50%);
+
+}
+
 #loading-screen {
     position: fixed;
 
@@ -293,7 +325,7 @@ body {
     z-index: 50;
 
     color: white;
-    background-color: lightblue;
+    background-color: #232323;
 }
 
 .invisible {
