--- a/index.css
+++ b/index.css
@@ -292,9 +292,9 @@ body {
     top: 0%;
     left: 0%;
     
-    max-width: 25%;
+    max-width: 15%;
 
-    transform: rotate(45deg) scale(0.5, 0.5) translate(-50%, -50%);
+    transform: rotate(45deg) scale(0.5, 0.5);
 
 }
 
