--- a/index.css
+++ b/index.css
@@ -5,6 +5,27 @@
 * Browsers: last 4 version
 */
 
+.example {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
+}
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 body {
     /* position: fixed; */
 
@@ -266,13 +287,15 @@ body {
     text-shadow: 4px 4px 10px #000000;
 }
 
-#video-screen {
+#video-wrap {
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
 
-    position: fixed;
+    position: absolute;
 
-    top: 0px;
-    right: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 
@@ -282,19 +305,46 @@ body {
     background-color: #232323;
 }
 
+#video-screen {
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+}
+
 .closed {
-    transform: translate(100%);
+    -webkit-transform: translate(100%);
+        -ms-transform: translate(100%);
+            transform: translate(100%);
+}
+
+#vs-video {
+    position: absolute;
+    
+    -o-object-fit: fill;
+    
+       object-fit: fill;
+    width: 100%;
+    height: 100%;
+
+    z-index: 31;
 }
 
 #vs-close-button {
-    position: relative;
+    position: absolute;
 
     top: 0%;
     left: 0%;
     
     max-width: 15%;
 
-    transform: rotate(45deg) scale(0.5, 0.5);
+    z-index: 32;
+
+    -webkit-transform: rotate(45deg) scale(0.5, 0.5);
+
+        -ms-transform: rotate(45deg) scale(0.5, 0.5);
+
+            transform: rotate(45deg) scale(0.5, 0.5);
 
 }
 
