--- a/index.css
+++ b/index.css
@@ -317,12 +317,18 @@ body {
     position: absolute;
 
     top: 50%;
-    left: 0%;
+    left: 50%;
 
-    height: 50%;
-    width: 100%;
+    width: 80vw;
+    height: auto;
 
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%);
+
+        -ms-transform: translateY(-50%) translateX(-50%);
+
+            transform: translateY(-50%) translateX(-50%);
+
+    opacity: .5;
 
     z-index: 50;
 }
@@ -364,8 +370,7 @@ body {
 
 .antihighlight {
     -webkit-touch-callout: none; 
-    -webkit-user-select: none;
-     -khtml-user-select: none; 
+    -webkit-user-select: none; 
        -moz-user-select: none; 
         -ms-user-select: none; 
             user-select: none;
