--- a/index.css
+++ b/index.css
@@ -35,6 +35,35 @@ body {
             transform: rotate(30deg) scale(0.8) scaleX(0.6);
 }
 
+#star-overlay {
+    pointer-events: none; 
+
+    position: fixed;
+    top: 0px;
+    right: 0px;
+
+    width: 100%;
+    height: 100%;
+
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+
+    z-index: 110;
+}
+
 #prereq {
     position: fixed;
     top: 0px;
